--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(checkAccept)
 export(checkLC)
 export(choose2)
 export(hPrime)
+export(lFun)
+export(sFun)
 export(sSample)
 export(uFun)
 export(zFun)
