SS: Code clean up with CL, CS, SS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ export(ars)
 export(faux_AcceptRejectx)
 export(faux_CheckLogConcavity)
 export(faux_InitChoose)
+export(faux_Lkx)
 export(faux_SampleSkx)
 export(faux_Skx)
 export(faux_Ukx)
 export(faux_Zj)
+export(faux_hPrimex)
 export(faux_hx)
-export(lFun)
+export(faux_uInterval)
