SS: Refine the optim function in InitChoose and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(faux_SampleSkx)
 export(faux_Skx)
 export(faux_Ukx)
 export(faux_Zj)
+export(faux_findmode)
 export(faux_hPrimex)
 export(faux_hx)
 export(faux_uInterval)
