--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,10 +12,11 @@ Authors@R: c(
 Maintainer: Who to complain to <shamindra@berkeley.edu>
 LazyData: true
 URL: https://github.com/shamindras/ars.git
-Imports:
+Imports: 
     stringr,
-    ggplot2
-Suggests:
+    ggplot2,
+    numDeriv
+Suggests: 
     ggplot2
 Description: An R Implementation Of The Adaptive Rejection Sampling (ARS)
     Algorithm This is based on the P. Wild and W. R. Gilks (1992) paper "Adaptive
