--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,9 @@ Maintainer: Who to complain to <shamindra@berkeley.edu>
 LazyData: true
 URL: https://github.com/shamindras/ars.git
 Imports:
-    stringr,
-    ggplot2
-Suggests:
-    ggplot2
+    numDeriv
+Suggests: 
+    stringr
 Description: An R Implementation Of The Adaptive Rejection Sampling (ARS)
     Algorithm This is based on the P. Wild and W. R. Gilks (1992) paper "Adaptive
     rejection sampling for Gibbs sampling"
