--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,21 +3,25 @@ Type: Package
 Title: An R Implementation Of The Adaptive Rejection Sampling (ARS) Algorithm
 Version: 1.0
 Authors@R: c(
-    person("Hadley", "Wickham", , "hadley@rstudio.com", role = c("aut", "cre")),
-    person("Winston", "Chang", role = "aut"),
-    person("RStudio", role = "cph"),
+    person("Shamindra", "Shrotriya", email = "shamindra@berkeley.edu",
+        role = c("aut", "cre")),
+    person("Courtney", "Schiffman", email = "courtneys@berkeley.edu",
+        role = "aut"),
+    person("Chenzhi", "Li", email = "lichenzhi@berkeley.edu", role = "aut"),
+    person("Jonathan", "Larson", email = "jonathan.larson@berkeley.edu",
+        role = "aut"),
     person("R Core team", role = "ctb",
-      comment = "Some namespace and vignette code extracted from base R")
+      comment = "Some namespace extracted from base R")
     )
-Maintainer: Who to complain to <shamindra@berkeley.edu>
+Maintainer: Shamindra Shrotriya <shamindra@berkeley.edu>
 LazyData: true
 URL: https://github.com/shamindras/ars.git
 Imports: 
     numDeriv
 Suggests: 
     stringr
-Description: An R Implementation Of The Adaptive Rejection Sampling (ARS)
-    Algorithm This is based on the P. Wild and W. R. Gilks (1992) paper "Adaptive
-    rejection sampling for Gibbs sampling"
+Description: An R implementation of the adaptive rejection sampling (ARS)
+    algorithm. This is based on the P. Wild and W. R. Gilks (1992) paper
+    "Adaptive rejection sampling for Gibbs sampling".
 License: GPL-2
 RoxygenNote: 5.0.1
