--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,10 +16,7 @@ Authors@R: c(
 Maintainer: Shamindra Shrotriya <shamindra@berkeley.edu>
 LazyData: true
 URL: https://github.com/shamindras/ars.git
-Imports: 
-    numDeriv
-Suggests: 
-    stringr
+Imports: numDeriv
 Description: An R implementation of the adaptive rejection sampling (ARS)
     algorithm. This is based on the P. Wild and W. R. Gilks (1992) paper
     "Adaptive rejection sampling for Gibbs sampling".
