--- a/.gitignore
+++ b/.gitignore
@@ -4,20 +4,18 @@
 
 # Example code in package build process
 *-Ex.R
-
 # RStudio files
 .Rproj.user/
-
 # produced vignettes
 # vignettes/*.html
 # vignettes/*.pdf
 vignettes/ars_cache/
-
 # Reference Folders
 reference/*.pdf
 .Rproj.user
-
 # DS_Store mac files
 .DS_Store
 R/.DS_Store
 inst/doc
+# report
+report/cache/
