--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ LazyData: true
 URL: https://github.com/shamindras/ars.git
 Imports: numDeriv
 Suggests: knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 Description: An R implementation of the adaptive rejection sampling (ARS)
     algorithm. This is based on the P. Wild and W. R. Gilks (1992) paper
     "Adaptive rejection sampling for Gibbs sampling".
